--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+server.port=8080
 spring.datasource.url = jdbc:sqlserver://localhost;databaseName=wifi_shopp
 spring.datasource.username = sa
-spring.datasource.password = 1234
+spring.datasource.password = 741
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
