--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
 			<artifactId>spring-cloud-gcp-core</artifactId>
 			<version>1.2.3.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.22</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
