--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
-spring.datasource.url = jdbc:sqlserver://localhost;databaseName=wifi_shopp
-spring.datasource.username = sa
-spring.datasource.password = 741
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url = jdbc:mysql://localhost/elcomabd?useTimezone=true&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = 1234
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.dialect= org.hibernate.dialect.MySQL8DialectDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
+spring.jpa.properties.hibernate.format_sql= true 
