--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url = jdbc:mysql://localhost/elcomabd?useTimezone=true&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = 741 Dinho
+spring.datasource.url = jdbc:mysql://elcomadb.mysql.uhserver.com/elcomabd?useTimezone=true&serverTimezone=UTC
+spring.datasource.username = userelcoma
+spring.datasource.password = @elcoma10
 spring.jpa.hibernate.dialect= org.hibernate.dialect.MySQL8DialectDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = none
