--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password = @elcoma10
 spring.jpa.hibernate.dialect= org.hibernate.dialect.MySQL5DialectDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = none
-spring.jpa.properties.hibernate.format_sql= true 
+spring.jpa.properties.hibernate.format_sql= true
+java.runtime.version=11
